--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -38,7 +38,7 @@
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Napsali o nás</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Řekli o nás</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Fotogalerie</a></li>
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Stanovy</a></li>
+                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/o-nas/stanovy/">Stanovy</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Výroční zprávy</a></li>
                     </ul>
                 </li>
@@ -51,8 +51,8 @@
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="ˇ/komunitni-deni/">Tvoříme komunitu</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Podporujeme děti</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Pořádáme akce</a></li>
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/nase-sluzby/">Služby &amp; terapie</a></li>
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Půjčujeme pomůcky</a></li>
+                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/sluzby-a-terapie/">Služby &amp; terapie</a></li>
+                        <!-- <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Půjčujeme pomůcky</a></li> -->
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/odborne-staze/">Odborné stáže</a></li>
                     </ul>
                 </li>
