Added page support

--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -16,7 +16,7 @@
                 <ul class="mobile-nav__list">
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/">Domů</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/o-nas/">O nás</a></li>
-                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">Podpora</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="/podpora/">Podpora</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/co-delame/pomahame-rodinam/">Co děláme</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/komunitni-deni/">Komunitní dění</a></li>
                     <!-- <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">PAS</a></li> -->
