--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -36,7 +36,7 @@
                 </div>
                 <div class="footer__menu-item">
                     <ul class="footer__submenu footer__submenu--last">
-                        <li class="footer__menu-item"><a class="footer__link" href="#">Podpora</a></li>
+                        <li class="footer__menu-item"><a class="footer__link" href="/podpora/">Podpora</a></li>
                         <li class="footer__menu-item"><a class="footer__link" href="/vize/">Vize</a></li>
                         <!-- <li class="footer__menu-item"><a class="footer__link" href="#">PAS</a></li> -->
                         <li class="footer__menu-item"><a class="footer__link" href="/partneri/">Partneři</a></li>
