--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -10,14 +10,14 @@
             <input class="mobile-nav__checkbox" type="checkbox" id="mobile-nav-toggle">
             <label class="mobile-nav__button" for="mobile-nav-toggle"><img class="mobile-nav__icon" src="/icons/icon-nav.svg" alt="navigace"></label>
 
-            <a class="mobile-nav__icon-close" href="index.html"><img src="/icons/icon-close.svg" width="35px" alt="ikona zavřít"></a>
+            <a class="mobile-nav__icon-close" href="/"><img src="/icons/icon-close.svg" width="35px" alt="ikona zavřít"></a>
 
             <nav class="mobile-nav__nav">
                 <ul class="mobile-nav__list">
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/">Domů</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/o-nas/">O nás</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/podpora/">Podpora</a></li>
-                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="/co-delame/pomahame-rodinam/">Co děláme</a></li>
+                    <li class="mobile-nav__item"><a class="mobile-nav__link" href="/co-delame/">Co děláme</a></li>
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/komunitni-deni/">Komunitní dění</a></li>
                     <!-- <li class="mobile-nav__item"><a class="mobile-nav__link" href="#">PAS</a></li> -->
                     <li class="mobile-nav__item"><a class="mobile-nav__link" href="/vize/">Vize</a></li>
@@ -42,13 +42,13 @@
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Výroční zprávy</a></li>
                     </ul>
                 </li>
-                <li class="navigation__item"><a class="navigation__link" href="#">Podpora</a></li>
-                <li class="navigation__item has-submenu"><a class="navigation__link" href="#">Co děláme</a>
+                <li class="navigation__item"><a class="navigation__link" href="/podpora/">Podpora</a></li>
+                <li class="navigation__item has-submenu"><a class="navigation__link" href="/co-delame/">Co děláme</a>
                     <ul class="navigation__submenu">
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/pomahame-rodinam/">Pomáháme rodinám</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Vzděláváme rodiče</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/vize/">Sdílíme vizi</a></li>
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="ˇ/komunitni-deni/">Tvoříme komunitu</a></li>
+                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/komunitni-deni/">Tvoříme komunitu</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Podporujeme děti</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Pořádáme akce</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/sluzby-a-terapie/">Služby &amp; terapie</a></li>
