--- a/css/style.css
+++ b/css/style.css
@@ -1012,7 +1012,6 @@ template {
 }
 .section-gift__qr-col-1-of-2 {
   flex: 1;
-  text-align: center;
 }
 .section-gift__qr-col-2-of-2 {
   flex: 1;
@@ -1020,17 +1019,21 @@ template {
 .section-gift__qr-title {
   text-transform: uppercase;
   font-size: 1.2rem;
-  margin-top: clamp(2rem, 8vw, 8rem);
+  margin-top: clamp(2rem, 4vw, 4rem);
 }
 .section-gift__num-account {
   font-weight: 400;
   font-size: 2rem;
 }
-.section-gift__fig {
+.section-gift__img {
   margin-bottom: 2rem;
 }
+.section-gift__img img {
+  max-width: 100%;
+  height: auto;
+}
 @media screen and (min-width: 900px) {
-  .section-gift__fig {
+  .section-gift__img {
     margin-bottom: 0;
   }
 }
