--- a/SCSS/layout/_footer.scss
+++ b/SCSS/layout/_footer.scss
@@ -5,6 +5,7 @@
     color: v.$color-grey-900;
     font-family: v.$font-special;
     font-weight: 500;
+    box-shadow: 3px 0 30px rgba(0, 0, 0, 0.1);
 
     &__conteiner {
         padding: clamp(v.$spacer, 8vw, v.$spacer-double);
