home and medallion

--- a/SCSS/components/_medallion.scss
+++ b/SCSS/components/_medallion.scss
@@ -11,7 +11,9 @@
 
     &__img {
         border-radius: 50%;
+        aspect-ratio: 1;
         max-width: 50vw;
+        height: auto;
     }
 
     &__title {
