Child support and contact

--- a/SCSS/base/_utilities.scss
+++ b/SCSS/base/_utilities.scss
@@ -24,6 +24,7 @@
 .u-padding-bottom-medium {padding-bottom: 4rem !important;}
 .u-padding-bottom-large {padding-bottom: 8rem !important;}
 
+.u-font-italic {font-style: italic;}
 
 .u-wrapper {
     max-width: 1120px;
