--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -30,8 +30,8 @@
                     <ul class="footer__submenu">
                         <!-- <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Aktuality a pozvánky</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Setkání podpůrné skupiny</a></li> -->
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Registrace na přednášky</a></li>
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Foto z akcí</a></li>
+                        <!-- <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Registrace na přednášky</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Foto z akcí</a></li> -->
                     </ul>
                 </div>
                 <div class="footer__menu-item">
