--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -60,8 +60,8 @@
                     <ul class="navigation__submenu">
                         <!-- <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Aktuality a pozvánky</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Setkání podpůrné skupiny</a></li> -->
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Registrace na přednášky</a></li>
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Fotky z akcí</a></li>
+                        <!-- <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Registrace na přednášky</a></li> -->
+                        <!-- <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Fotky z akcí</a></li> -->
                     </ul>
                 </li>
                 <!-- <li class="navigation__item"><a class="navigation__link" href="#">PAS</a></li> -->
