--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -6,10 +6,10 @@
                 <figcaption class="footer__fig"><img src="/icons/logo.svg" width="200px" alt="logo KoniPAS"></figcaption>
                 <div class="footer__menu-item"><a class="footer__link" href="/o-nas/">O nás</a>
                     <ul class="footer__submenu">
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Co se povedlo</a></li>
+                        <!-- <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Co se povedlo</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Napsali o nás</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Řekli o nás</a></li>
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Fotogalerie</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Fotogalerie</a></li> -->
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="/o-nas/stanovy/">Stanovy</a></li>
                         <!-- <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Výroční zprávy</a></li> -->
                     </ul>
@@ -17,12 +17,12 @@
                 <div class="footer__menu-item"><a class="footer__link" href="/co-delame/">Co děláme</a>
                     <ul class="footer__submenu">
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/pomahame-rodinam/">Pomáháme rodinám</a></li>
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Vzděláváme rodiče</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/vzdelavame-rodice/">Vzděláváme rodiče</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="/vize/">Sdílíme vizi</a></li>
-                        <!-- <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Tvoříme komunitu</a></li> -->
-                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Podporujeme děti</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="/komunitni-deni/">Tvoříme komunitu</a></li>
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/podporujeme-deti/">Podporujeme děti</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/sluzby-a-terapie/">Služby &amp; terapie</a></li>
-                        <!-- <li class="footer__submenu-item"><a class="footer__submenu-link" href="#">Půjčujeme pomůcky</a></li> -->
+                        <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/pujcujeme-pomucky/">Půjčujeme pomůcky</a></li>
                         <li class="footer__submenu-item"><a class="footer__submenu-link" href="/co-delame/odborne-staze/">Odborné stáže</a></li>
                     </ul>
                 </div>
