--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -34,12 +34,12 @@
                 <li class="navigation__item"><a class="navigation__link" href="/">Domů</a></li>
                 <li class="navigation__item has-submenu"><a class="navigation__link" href="/o-nas/">O nás</a>
                     <ul class="navigation__submenu">
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Co se povedlo</a></li>
+                        <!-- <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Co se povedlo</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Napsali o nás</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Řekli o nás</a></li>
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Fotogalerie</a></li>
+                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Fotogalerie</a></li> -->
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/o-nas/stanovy/">Stanovy</a></li>
-                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Výroční zprávy</a></li>
+                        <!-- <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Výroční zprávy</a></li> -->
                     </ul>
                 </li>
                 <li class="navigation__item"><a class="navigation__link" href="/podpora/">Podpora</a></li>
@@ -52,7 +52,7 @@
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Podporujeme děti</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Pořádáme akce</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/sluzby-a-terapie/">Služby &amp; terapie</a></li>
-                        <!-- <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="#">Půjčujeme pomůcky</a></li> -->
+                        <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/pujcujeme-pomucky/">Půjčujeme pomůcky</a></li>
                         <li class="navigation__submenu-item"><a class="navigation__submenu-link" href="/co-delame/odborne-staze/">Odborné stáže</a></li>
                     </ul>
                 </li>
